src/objects/Testtaker_Test_Result_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Correct_Answer__c</fullName>
        <label>Correct Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Score__c</fullName>
        <label>Max Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Possible_Answers__c</fullName>
        <description>Possible answers supplied on the test</description>
        <label>Possible Answers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <label>Question #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recorded_Score__c</fullName>
        <label>Recorded Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplied_Answer__c</fullName>
        <label>Supplied Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Question__c</fullName>
        <label>Test Question</label>
        <referenceTo>Testtaker_Test_Question__c</referenceTo>
        <relationshipLabel>Test Result Details</relationshipLabel>
        <relationshipName>Test_Result_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Result__c</fullName>
        <label>Test Result</label>
        <referenceTo>Testtaker_Test_Result__c</referenceTo>
        <relationshipLabel>Test Result Details</relationshipLabel>
        <relationshipName>Test_Result_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Result Detail</label>
    <nameField>
        <displayFormat>TRD-{00000}</displayFormat>
        <label>Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Result Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>